feat: 네이버 navbar 구현

--- a/naver/index.html
+++ b/naver/index.html
@@ -71,87 +71,83 @@
 
       <!-- NavBar -->
       <nav class="navbar">
-        <ul class="navbar__list-shortcut">
-          <li class="navbar__list-shortcut__item news">
-            <a href="#" class="navbar__list-shortcut__item__link">
+        <ul class="navbar__list">
+          <li class="navbar__shortcut news">
+            <a href="#" class="navbar__shortcut__link">
               <img
                 src="./src/images/shorcut/news.png"
                 alt="뉴스판"
-                class="navbar__list-shortcut__item__link__image"
+                class="navbar__image"
               />
-              <div class="navbar__list-shortcut__item__link__text">뉴스판</div>
+              <div class="navbar__shortcut__text">뉴스판</div>
             </a>
           </li>
-          <li class="navbar__list-shortcut__item shopping">
-            <a href="#" class="navbar__list-shortcut__item__link">
+          <li class="navbar__shortcut shopping">
+            <a href="#" class="navbar__shortcut__link">
               <img
                 src="./src/images/shorcut/shopping.png"
                 alt="쇼핑판"
-                class="navbar__list-shortcut__item__link__image"
+                class="navbar__image"
               />
-              <div class="navbar__list-shortcut__item__link__text">쇼핑판</div>
+              <div class="navbar__shortcut__text">쇼핑판</div>
             </a>
           </li>
-          <li class="navbar__list-shortcut__item stock">
-            <a href="#" class="navbar__list-shortcut__item__link">
+          <li class="navbar__shortcut stock">
+            <a href="#" class="navbar__shortcut__link">
               <img
                 src="./src/images/shorcut/stock.png"
                 alt="경제지표판"
-                class="navbar__list-shortcut__item__link__image"
+                class="navbar__image"
               />
-              <div class="navbar__list-shortcut__item__link__text">
-                경제지표판
-              </div>
+              <div class="navbar__shortcut__text">경제지표판</div>
             </a>
           </li>
-          <li class="navbar__list-shortcut__item sports">
-            <a href="#" class="navbar__list-shortcut__item__link">
+          <li class="navbar__shortcut sports">
+            <a href="#" class="navbar__shortcut__link">
               <img
                 src="./src/images/shorcut/sports.png"
                 alt="스포츠판"
-                class="navbar__list-shortcut__item__link__image"
+                class="navbar__image"
               />
-              <div class="navbar__list-shortcut__item__link__text">
-                스포츠판
-              </div>
+              <div class="navbar__shortcut__text">스포츠판</div>
             </a>
           </li>
-          <li class="navbar__list-shortcut__item mail">
-            <a href="#" class="navbar__list-shortcut__item__link">
+          <li class="navbar__shortcut mail">
+            <a href="#" class="navbar__shortcut__link">
               <img
                 src="./src/images/shorcut/mail.png"
                 alt="메일"
-                class="navbar__list-shortcut__item__link__image"
+                class="navbar__image"
               />
-              <div class="navbar__list-shortcut__item__link__text">메일</div>
+              <div class="navbar__shortcut__text">메일</div>
             </a>
           </li>
-          <li class="navbar__list-shortcut__item cafe">
-            <a href="#" class="navbar__list-shortcut__item__link">
+          <li class="navbar__shortcut cafe">
+            <a href="#" class="navbar__shortcut__link">
               <img
                 src="./src/images/shorcut/cafe.png"
                 alt="카페"
-                class="navbar__list-shortcut__item__link__image"
+                class="navbar__image"
               />
-              <div class="navbar__list-shortcut__item__link__text">카페</div>
+              <div class="navbar__shortcut__text">카페</div>
             </a>
           </li>
-          <li class="navbar__list-shortcut__item blog">
-            <a href="#" class="navbar__list-shortcut__item__link">
+          <li class="navbar__shortcut blog">
+            <a href="#" class="navbar__shortcut__link">
               <img
                 src="./src/images/shorcut/cafe.png"
                 alt="블로그"
-                class="navbar__list-shortcut__item__link__image"
+                class="navbar__image"
               />
-              <div class="navbar__list-shortcut__item__link__text">블로그</div>
+              <div class="navbar__shortcut__text">블로그</div>
             </a>
           </li>
-          <li class="navbar__list-shortcut__item more-shortcut">
-            <a href="#" class="navbar__list-shortcut__item__link">
+          <li class="navbar__shortcut more-shortcut">
+            <a href="#" class="navbar__shortcut__link">
               <img
                 src="./src/images/shorcut/more.png"
                 alt="more"
-                class="navbar__list-shortcut__item__link__image"
+                class="navbar__image"
               />
             </a>
           </li>
