feat: 네이버 AI 섹션 카드 구현

--- a/naver/index.html
+++ b/naver/index.html
@@ -149,6 +149,7 @@
                 alt="more"
                 class="navbar__image"
               />
+              <div class="navbar__shortcut__text hidden">more</div>
             </a>
           </li>
         </ul>
@@ -192,13 +193,29 @@
               미세먼지 예보를 여기에서 바로 보세요
             </a>
           </div>
-          <div class="content__card__item vaccine">백신</div>
-          <div class="content__card__item covid">코로나</div>
-          <div class="content__card__item stock">주식</div>
+          <div class="content__card__item card-sm">
+            <img
+              src="/naver/src/images/section/content/card-sm.png"
+              alt="현대카드"
+              class="card-sm__image"
+            />
+            <span class="card-sm__close"></span>
+          </div>
+          <div class="content__card__item ai">
+            <div class="ai__wrap">
+              <span class="ai__image"></span>
+              <a class="ai__text">
+                더 편리해진 <strong>AI</strong> 검색 기능
+                <br />
+                <strong>네이버앱</strong>에서 만나보세요
+              </a>
+            </div>
+            <span class="ai__more"> 앱 사용하기</span>
+          </div>
           <div class="content__card__item now">now</div>
           <div class="content__card__item system">시스템</div>
-          <div class="content__card__item card">카드</div>
-          <div class="content__card__item shopping">쇼핑</div>
+          <div class="content__card__item vaccine">백신</div>
+          <div class="content__card__item card-lg">카드</div>
         </div>
 
         <!-- MoreEvent -->
