feat: 네이버 비즈니스 카드 섹션 구현

--- a/naver/index.html
+++ b/naver/index.html
@@ -213,7 +213,24 @@
             <span class="ai__more"> 앱 사용하기</span>
           </div>
           <div class="content__card__item now">now</div>
-          <div class="content__card__item system">시스템</div>
+          <div class="content__card__item system">
+            <img
+              src="/naver/src/images/section/content/system.jpg"
+              alt="네이버 비즈니스"
+              class="system__image"
+            />
+            <div class="system__wrap">
+              <span class="system__wrap__image"></span>
+              <a class="system__wrap__text">
+                <strong>네이버 SME 풀케어 시스템</strong>
+                <p>
+                  사업의 시작부터 성공까지
+                  <br />
+                  사장님의 경쟁력, 네이버
+                </p>
+              </a>
+            </div>
+          </div>
           <div class="content__card__item vaccine">백신</div>
           <div class="content__card__item card-lg">카드</div>
         </div>
