--- a/naver/index.html
+++ b/naver/index.html
@@ -231,7 +231,13 @@
               </a>
             </div>
           </div>
-          <div class="content__card__item vaccine">백신</div>
+          <div class="content__card__item vaccine">
+            <img
+              src="/naver/src/images/section/content/vaccine.png"
+              alt="네이버 백신 예약"
+              class="vaccine__image"
+            />
+          </div>
           <div class="content__card__item card-lg">카드</div>
         </div>
 
