feat: 네이버 현대카드 광고 카드 섹션 구현

--- a/naver/index.html
+++ b/naver/index.html
@@ -238,7 +238,28 @@
               class="vaccine__image"
             />
           </div>
-          <div class="content__card__item card-lg">카드</div>
+          <div class="content__card__item card-lg">
+            <img
+              src="/naver/src/images/section/content/card-lg.jpg"
+              alt="현대카드 광고"
+              class="card-lg__image"
+            />
+            <div class="card-lg__wrap">
+              <img
+                src="https://s.pstatic.net/static/www/mobile/edit/20210827/upload_16300585158877Nm4F.jpg"
+                alt="네이버 멤버쉽"
+                class="card-lg__wrap__image"
+              />
+              <a class="card-lg__wrap__text">
+                <strong>네이버 현대카드</strong>
+                <p>
+                  1만원 캐시백, 멤버십 제공까지
+                  <br />
+                  네이버 현대카드 자세히 보기
+                </p>
+              </a>
+            </div>
+          </div>
         </div>
 
         <!-- MoreEvent -->
