feat: 네이버 now 카드 섹션 구현

--- a/naver/index.html
+++ b/naver/index.html
@@ -212,7 +212,65 @@
             </div>
             <span class="ai__more"> 앱 사용하기</span>
           </div>
-          <div class="content__card__item now">now</div>
+          <div class="content__card__item now">
+            <span class="now__image"></span>
+            <ul class="now__list scroll">
+              <li class="now__item">
+                <a href="#" class="now__item__link">
+                  <img
+                    src="/naver/src/images/section/now/now1.png"
+                    alt="김필과 야간합주실🎤"
+                    class="now__item__image"
+                  />
+                </a>
+              </li>
+              <li class="now__item">
+                <a href="#" class="now__item__link">
+                  <img
+                    src="/naver/src/images/section/now/now2.png"
+                    alt="유기현이랑 기다리는 심야아이..."
+                    class="now__item__image"
+                  />
+                </a>
+              </li>
+              <li class="now__item">
+                <a href="#" class="now__item__link">
+                  <img
+                    src="/naver/src/images/section/now/now3.png"
+                    alt="슬기선배님🥰우주소녀 왔어요"
+                    class="now__item__image"
+                  />
+                </a>
+              </li>
+              <li class="now__item">
+                <a href="#" class="now__item__link">
+                  <img
+                    src="/naver/src/images/section/now/now4.png"
+                    alt="안녕, 이불킥 🥲 사랑했다💛💙"
+                    class="now__item__image"
+                  />
+                </a>
+              </li>
+              <li class="now__item">
+                <a href="#" class="now__item__link">
+                  <img
+                    src="/naver/src/images/section/now/now5.png"
+                    alt="배개 옆 BGM"
+                    class="now__item__image"
+                  />
+                </a>
+              </li>
+              <li class="now__item">
+                <a href="#" class="now__item__link">
+                  <img
+                    src="/naver/src/images/section/now/now6.png"
+                    alt="내 손으로 뽑는 제 2대 슈퍼밴드"
+                    class="now__item__image"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
           <div class="content__card__item system">
             <img
               src="/naver/src/images/section/content/system.jpg"
