--- a/kakao/index.html
+++ b/kakao/index.html
@@ -14,6 +14,7 @@
       rel="shortcut icon"
       href="https://www.kakaocorp.com/page/favicon.ico"
     />
+    <link rel="stylesheet" href="./src/css/main.css">
     <title>카카오-클론</title>
   </head>
   <body>
