feat: 카카오 헤더 구현

--- a/kakao/index.html
+++ b/kakao/index.html
@@ -23,7 +23,7 @@
       <div class="header__wrap">
         <h1 class="header__title">kakao</h1>
         <nav class="header__nav">
-          <ul>
+          <ul class="header__nav__list">
             <li class="header__nav__item">카카오</li>
             <li class="header__nav__item">뉴스</li>
             <li class="header__nav__item">기술과 서비스</li>
@@ -32,10 +32,10 @@
         </nav>
         <div class="header__util">
           <button class="header__util__item">
-            <i class="fas fa-globe"></i>
+            <i class="fas fa-search"></i>
           </button>
           <button class="header__util__item">
-            <i class="fas fa-search"></i>
+            <i class="fas fa-globe"></i>
           </button>
           <button class="header__util__item">
             <i class="far fa-moon"></i>
