refactor: 카카오 scss 진입파일명 변경

--- a/kakao/index.html
+++ b/kakao/index.html
@@ -14,7 +14,7 @@
       rel="shortcut icon"
       href="https://www.kakaocorp.com/page/favicon.ico"
     />
-    <link rel="stylesheet" href="./src/css/main.css">
+    <link rel="stylesheet" href="./src/css/style.css">
     <title>카카오-클론</title>
   </head>
   <body>
