--- a/kakao/index.html
+++ b/kakao/index.html
@@ -48,19 +48,20 @@
     <main class="main">
       <div class="main__wrap">
         <h3 class="main__title">
-          <img src="./src/images/ico_calendar.png" alt="달력" />
-          오늘의 카카오
-          <br />
-          10월 1일 금요일 소식입니다
+          <span class="main__title__wrap">
+            <img class="main__title__image" src="./src/images/ico_calendar.png" alt="달력" />
+            <div class="main__title__text">오늘의 카카오</div>
+          </span>
+          <div class="main__title__text">10월 1일 금요일 소식입니다</div>
         </h3>
         <section class="main__grid">
-          <article class="main__content stock"></article>
-          <article class="main__content responsible"></article>
-          <article class="main__content culture"></article>
-          <article class="main__contetn customer"></article>
-          <article class="main__content privacy"></article>
-          <article class="main__content service"></article>
-          <article class="main__content crew"></article>
+          <article class="main__content stock">stock</article>
+          <article class="main__content responsible">responsible</article>
+          <article class="main__content culture">culture</article>
+          <article class="main__contetn customer">customer</article>
+          <article class="main__content privacy">privacy</article>
+          <article class="main__content service">service</article>
+          <article class="main__content crew">crew</article>
         </section>
         <button class="main__collection-button">카카오 소식 모아보기</button>
         <button class="main__upper-button">
